--- a/charts/worker/templates/deployment.yaml
+++ b/charts/worker/templates/deployment.yaml
@@ -47,6 +47,14 @@ spec:
                   fieldPath: status.podIP
             - name: RQ_REDIS_URL
               value: {{ .Values.redis.url | quote }}
+            - name: DB_NAME
+              value: {{ .Values.postgres.dbname | quote }}
+            - name: DB_USERNAME
+              value: {{ .Values.postgres.username | quote }}
+            - name: DB_PASSWORD
+              value: {{ .Values.postgres.password | quote }}
+            - name: DB_HOST
+              value: {{ .Values.postgres.host | quote }}
           ports:
             - name: http
               containerPort: 8080
