Fix scraping rq task

--- a/helmfile.yaml
+++ b/helmfile.yaml
@@ -2,7 +2,7 @@ environments:
   default:
     values:
       - monitoring:
-          enabled: false
+          enabled: true
       - backend:
           tag: test
   prod:
