--- a/Pipfile
+++ b/Pipfile
@@ -11,9 +11,12 @@ rq = "1.10.0"
 django-redis = "5.0.0"
 django-health-check = "3.16.4"
 django-configurations = "2.3"
+djangorestframework= "3.12.4"
+drf-yasg = "1.20.0"
 psycopg2-binary = "2.9.1"
 Scrapy = "2.5.1"
 extruct = "0.13.0"
+apiview = "*"
 
 [dev-packages]
 
