--- a/Pipfile
+++ b/Pipfile
@@ -10,16 +10,17 @@ django_rq = "2.5.0"
 rq = "1.10.0"
 django-redis = "5.0.0"
 django-health-check = "3.16.4"
-django-configurations = "2.3"
+django-configurations = "2.3.1"
 djangorestframework= "3.12.4"
 drf-yasg = "1.20.0"
 psycopg2-binary = "2.9.1"
 hiredis = "2.0.0"
 Scrapy = "2.5.1"
 extruct = "0.13.0"
-apiview = "*"
 
 [dev-packages]
+pytest = "6.2.5"
+pytest-django = "4.3.0"
 
 [requires]
 python_version = "3.9"
