--- a/charts/cms/templates/deployment.yaml
+++ b/charts/cms/templates/deployment.yaml
@@ -34,6 +34,8 @@ spec:
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           args:
+            - python3
+            - manage.py
             - runserver
             - 0.0.0.0:8080
           env:
@@ -74,6 +76,8 @@ spec:
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           args:
+            - python3
+            - manage.py
             - migrate
           env:
             - name: RQ_REDIS_URL
