--- a/charts/worker/templates/deployment.yaml
+++ b/charts/worker/templates/deployment.yaml
@@ -34,6 +34,8 @@ spec:
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           args:
+            - python3
+            - manage.py
             - rqworker
 {{- range $queue := .Values.rqQueues | required "rqQueues is not defined"}}
             - {{ $queue }}
