--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -31,6 +31,9 @@ jobs:
       - name: Check out repository code
         uses: actions/checkout@v2
 
+      - name: Setup toolset
+        run: make setup-toolset-mac
+
       - name: Install Dependencies
         run: make pipenv-install
 
