Run helmfule validate only if changed

--- a/.github/workflows/helmfile-validate.yaml
+++ b/.github/workflows/helmfile-validate.yaml
@@ -1,5 +1,10 @@
 name: Helmfile Validate
-on: push
+on:
+  push:
+    paths:
+      - charts/**
+      - helmfile/**
+      - helmfile.yaml
 
 jobs:
   validate:
