--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -38,7 +38,9 @@ jobs:
           python-version: '3.10'
 
       - name: Install Dependencies
-        run: make setup-toolset-mac
+        run: |
+          make setup-pipenv
+          make pipenv-install
 
       - name: Run tests
         run: make test
