--- a/Pipfile
+++ b/Pipfile
@@ -22,6 +22,7 @@ extruct = "0.13.0"
 pytest = "6.2.5"
 pytest-cov = "3.0.0"
 pytest-django = "4.3.0"
+coverage = "6.2.0"
 
 [requires]
 python_version = "3.10.0"
