--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -25,3 +25,23 @@ jobs:
         if: github.ref == 'refs/heads/master'
         run: |
           make publish-image IMAGE_TAG=zifter/byprice24-cms:${GITHUB_REF##*/}
+
+  mac:
+    runs-on: macos-11
+    if: github.ref == 'refs/heads/main'
+    steps:
+      - name: Check out repository code
+        uses: actions/checkout@v2
+
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.10'
+
+      - name: Install Dependencies
+        run: |
+          make setup-pipenv
+          make pipenv-install
+
+      - name: Run tests
+        run: make test
