Set no limits for ingress nginx in local env

--- a/helmfile/releases/values-ingress-nginx.yaml
+++ b/helmfile/releases/values-ingress-nginx.yaml
@@ -20,6 +20,10 @@ controller:
       key: node-role.kubernetes.io/master
       operator: Equal
 
+  resources:
+    requests:
+      cpu: 0m  # no limits for cpu in local
+
   hostPort:
     enabled: true
 
