--- a/site-frontend/Dockerfile
+++ b/site-frontend/Dockerfile
@@ -1,5 +1,5 @@
 # pull official base image
-FROM node:13.12.0-alpine
+FROM node:17.1.0-alpine
 
 # set working directory
 WORKDIR /app
@@ -11,10 +11,13 @@ ENV PATH /app/node_modules/.bin:$PATH
 COPY package.json ./
 COPY package-lock.json ./
 RUN npm install --silent
-RUN npm install react-scripts@3.4.1 -g --silent
+# RUN npm install react-scripts@4.0.3 -g --silent
+
+ENV NODE_OPTIONS --openssl-legacy-provider
 
 # add app
 COPY . ./
 
 # start app
-CMD ["npm", "start"]
+EXPOSE 3000
+CMD ["yarn", "start"]
