--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -2,7 +2,7 @@ name: ci
 on: push
 
 jobs:
-  docker:
+  backend-image-test:
     runs-on: ubuntu-latest
     env:
       DOCKER_USER: ${{ secrets.DOCKER_USER }}
@@ -16,17 +16,17 @@ jobs:
         run: make docker-login DOCKER_USER=$DOCKER_USER DOCKER_PASS=$DOCKER_PASS
 
       - name: Build Docker Image
-        run: make build-image IMAGE_TAG=zifter/byprice24-cms:${GITHUB_REF##*/}
+        run: make backend-image-build IMAGE_TAG=zifter/byprice24-cms:${GITHUB_REF##*/}
 
       - name: Test Docker Image
-        run: make test-image IMAGE_TAG=zifter/byprice24-cms:${GITHUB_REF##*/}
+        run: make backend-image-test IMAGE_TAG=zifter/byprice24-cms:${GITHUB_REF##*/}
 
       - name: Publish Docker Image
         if: github.ref == 'refs/heads/master'
         run: |
-          make publish-image IMAGE_TAG=zifter/byprice24-cms:${GITHUB_REF##*/}
+          make backend-image-publish IMAGE_TAG=zifter/byprice24-cms:${GITHUB_REF##*/}
 
-  mac:
+  backend-test-mac:
     runs-on: macos-11
     if: github.ref == 'refs/heads/main'
     steps:
@@ -40,7 +40,7 @@ jobs:
 
       - name: Install Dependencies
         run: |
-          make setup-pipenv
+          cd contributing && make setup-pipenv
           make pipenv-install
 
       - name: Run tests
