--- a/.github/workflows/helmfile-validate.yaml
+++ b/.github/workflows/helmfile-validate.yaml
@@ -2,12 +2,10 @@ name: Helmfile Validate
 on:
   push:
     paths:
-      - charts/**
-      - helmfile/**
-      - helmfile.yaml
+      - deployment/**
 
 jobs:
-  validate:
+  helmfile-validate:
     runs-on: ubuntu-latest
     timeout-minutes: 10
 
@@ -23,7 +21,6 @@ jobs:
           helmfile-version: "v0.140.1"
 
       - name: Validate
+        working-directory: ./deployment
         run: |
-          helmfile build
-          helmfile -e prod build
-          helmfile template
+          make validate
