--- a/frontend/Makefile
+++ b/frontend/Makefile
@@ -1,16 +1,16 @@
 ###########
 # Site
-run:
+frontend-run:
 	$(info Start site)
 	yarn start
 
 # Build image of site for
-build-image: IMAGE_TAG := zifter/byprice24-site:test
-build-image:
+frontend-build-image: IMAGE_TAG := zifter/byprice24-site:test
+frontend-build-image:
 	$(info Build docker image)
 	docker build . -t $(IMAGE_TAG)
 
-run-image: IMAGE_TAG := zifter/byprice24-site:test
-run-image:
+frontend-run-image: IMAGE_TAG := zifter/byprice24-site:test
+frontend-run-image:
 	$(info Build docker image)
 	docker run -p 3000:3000 -t $(IMAGE_TAG)
