--- a/deployment/helmfile/10-application.yaml
+++ b/deployment/helmfile/10-application.yaml
@@ -42,5 +42,7 @@ releases:
     labels:
       side: "frontend"
     values:
+      - releases/frontend/values.yaml
+      - releases/frontend/values-{{ .Environment.Name }}.yaml
       - image:
           tag: {{ .Values.app.tag }}
