--- a/deployment/helmfile.yaml
+++ b/deployment/helmfile.yaml
@@ -3,13 +3,13 @@ environments:
     values:
       - monitoring:
           enabled: false
-      - backend:
+      - app:
           tag: test
   prod:
     values:
       - monitoring:
           enabled: false
-      - backend:
+      - app:
           tag: latest
 
 helmfiles:
