--- a/.github/workflows/backend-ci.yaml
+++ b/.github/workflows/backend-ci.yaml
@@ -1,8 +1,16 @@
-name: ci
-on: push
+name: backend-ci
+on:
+  push:
+    paths:
+      - src/**
+      - fixtures/**
+      - testdata/**
+      - Pipfile
+      - Dockerfile
+
 
 jobs:
-  backend-image-test:
+  image-test:
     runs-on: ubuntu-latest
     env:
       DOCKER_USER: ${{ secrets.DOCKER_USER }}
@@ -26,7 +34,7 @@ jobs:
         run: |
           make backend-image-publish IMAGE_TAG=zifter/byprice24-cms:${GITHUB_REF##*/}
 
-  backend-test-mac:
+  test-mac:
     runs-on: macos-11
     if: github.ref == 'refs/heads/main'
     steps:
