--- a/deployment/helmfile/releases/backend/values-cms.yaml
+++ b/deployment/helmfile/releases/backend/values-cms.yaml
@@ -3,7 +3,9 @@ ingress:
   hosts:
     - host: localhost
       paths:
-        - path: /
+        - path: /admin
+          pathType: Prefix
+        - path: /admin-static
           pathType: Prefix
 
 redis:
