--- a/deployment/helmfile.yaml
+++ b/deployment/helmfile.yaml
@@ -1,16 +1,25 @@
 environments:
-  default:
+  local:
     values:
       - monitoring:
           enabled: false
       - app:
           tag: test
+      - redis:
+          enabled: true
+      - postgres:
+          enabled: true
+
   prod:
     values:
       - monitoring:
           enabled: false
       - app:
           tag: latest
+      - redis:
+          enabled: true
+      - postgres:
+          enabled: false  # will be used managed
 
 helmfiles:
   - path: "helmfile/00-infra.yaml"
