--- a/.github/workflows/backend-ci.yaml
+++ b/.github/workflows/backend-ci.yaml
@@ -20,6 +20,9 @@ jobs:
       - name: Check out repository code
         uses: actions/checkout@v2
 
+      - name: Check migrations
+        run: make migrations-check
+
       - name: Login to DockerHub
         run: make docker-login DOCKER_USER=$DOCKER_USER DOCKER_PASS=$DOCKER_PASS
 
