Fix agent, fix search, fix site deployment

--- a/deployment/helmfile/releases/backend/cms/values-local.yaml
+++ b/deployment/helmfile/releases/backend/cms/values-local.yaml
@@ -6,6 +6,8 @@ ingress:
           pathType: Prefix
         - path: /admin-static
           pathType: Prefix
+        - path: /api
+          pathType: Prefix
 
 postgres:
   dbname: "byprice24"
