--- a/.github/workflows/backend-ci.yaml
+++ b/.github/workflows/backend-ci.yaml
@@ -50,9 +50,13 @@ jobs:
         with:
           python-version: '3.10'
 
+      - name: Setup Pipenv
+        working-directory: ./contributing
+        run: |
+          make setup-pipenv
+
       - name: Install Dependencies
         run: |
-          cd contributing && make setup-pipenv
           make pipenv-install
 
       - name: Run tests
