--- a/deployment/helmfile/00-infra.yaml
+++ b/deployment/helmfile/00-infra.yaml
@@ -12,6 +12,9 @@ releases:
     values:
       - releases/prometheus-stack/values.yaml
       - releases/prometheus-stack/values-{{ .Environment.Name }}.yaml
+      - grafana:
+          adminUser: {{ .Values.monitoring.grafana.user | toYaml }}
+          adminPassword: {{ .Values.monitoring.grafana.pass | toYaml }}
 
   - name: ingress-nginx
     namespace: kube-system
@@ -55,6 +58,9 @@ releases:
     values:
       - releases/postgres/values.yaml
       - releases/postgres/values-{{ .Environment.Name }}.yaml
+      - postgresqlDatabase: {{ .Values.postgres.dbName | toYaml }}
+      - postgresqlUsername: {{ .Values.postgres.user | toYaml }}
+      - postgresqlPassword: {{ .Values.postgres.pass | toYaml }}
 
   - name: postgres-exporter
     namespace: monitoring
@@ -65,4 +71,10 @@ releases:
       - prometheus-stack
     values:
       - releases/postgres-exporter/values.yaml
-      - releases/postgres-exporter/values-{{ .Environment.Name }}.yaml
+      - config:
+          datasource:
+            host: {{ .Values.postgres.host | toYaml }}
+            user: {{ .Values.postgres.user | toYaml }}
+            password: {{ .Values.postgres.pass | toYaml }}
+            database: {{ .Values.postgres.dbName | toYaml }}
+            port: {{ .Values.postgres.port | toYaml }}
