--- a/deployment/helmfile/10-application.yaml
+++ b/deployment/helmfile/10-application.yaml
@@ -13,7 +13,13 @@ releases:
       - releases/backend/cms/values.yaml
       - releases/backend/cms/values-{{ .Environment.Name }}.yaml
       - image:
-          tag: {{ .Values.app.tag }}
+          tag: {{ .Values.app.backend }}
+      - postgres:
+          dbname: {{ .Values.postgres.dbName }}
+          username: {{ .Values.postgres.user }}
+          password: {{ .Values.postgres.pass }}
+          host: {{ .Values.postgres.host }}
+          port: {{ .Values.postgres.port }}
 
   - name: worker-crawler
     namespace: default
@@ -22,10 +28,15 @@ releases:
       side: "backend"
     values:
       - releases/backend/worker/values.yaml
-      - releases/backend/worker/values-{{ .Environment.Name }}.yaml
       - releases/backend/worker/values-crawler.yaml
       - image:
-          tag: {{ .Values.app.tag }}
+          tag: {{ .Values.app.backend }}
+      - postgres:
+          dbname: {{ .Values.postgres.dbName }}
+          username: {{ .Values.postgres.user }}
+          password: {{ .Values.postgres.pass }}
+          host: {{ .Values.postgres.host }}
+          port: {{ .Values.postgres.port }}
 
   - name: worker-etc
     namespace: default
@@ -34,10 +45,15 @@ releases:
       side: "backend"
     values:
       - releases/backend/worker/values.yaml
-      - releases/backend/worker/values-{{ .Environment.Name }}.yaml
       - releases/backend/worker/values-etc.yaml
       - image:
-          tag: {{ .Values.app.tag }}
+          tag: {{ .Values.app.backend }}
+      - postgres:
+          dbname: {{ .Values.postgres.dbName }}
+          username: {{ .Values.postgres.user }}
+          password: {{ .Values.postgres.pass }}
+          host: {{ .Values.postgres.host }}
+          port: {{ .Values.postgres.port }}
 
   - name: site
     namespace: default
@@ -48,4 +64,4 @@ releases:
       - releases/frontend/values.yaml
       - releases/frontend/values-{{ .Environment.Name }}.yaml
       - image:
-          tag: {{ .Values.app.tag }}
+          tag: {{ .Values.app.frontend }}
