Add pagination, add autoremoved whitespaces in query, add min price and number of marketplaces product instock

--- a/src/marketplace/fixtures/marketplaces_test.yaml
+++ b/src/marketplace/fixtures/marketplaces_test.yaml
@@ -3,3 +3,8 @@
   fields:
     domain: localhost
     image_logo_url: https://www.test.by/
+- model: marketplace.marketplace
+  pk: 2
+  fields:
+    domain: 0.0.0.0
+    image_logo_url: https://www.test2.by/
