--- a/src/marketplace/fixtures/products_test.yaml
+++ b/src/marketplace/fixtures/products_test.yaml
@@ -13,3 +13,63 @@
   fields:
     name: Acer Extensa 15 EX215-54-348Z NX.EGJER.00M
     category: notebook
+- model: marketplace.product
+  pk: 4
+  fields:
+    name: Samsung QE50LS01TBU
+    category: TV
+- model: marketplace.product
+  pk: 5
+  fields:
+    name: Samsung QE50LS01TBUA
+    category: TV
+- model: marketplace.product
+  pk: 6
+  fields:
+    name: Samsung QE50LS01TBUAD
+    category: TV
+- model: marketplace.product
+  pk: 7
+  fields:
+    name: Samsung 1123131ADDA
+    category: TV
+- model: marketplace.product
+  pk: 8
+  fields:
+    name: Samsung 1213123
+    category: TV
+- model: marketplace.product
+  pk: 9
+  fields:
+    name: Samsung ZAXAXAX
+    category: TV
+- model: marketplace.product
+  pk: 10
+  fields:
+    name: Samsung QEZXZ50LS01TBU
+    category: TV
+- model: marketplace.product
+  pk: 11
+  fields:
+    name: Samsung QESS50LS01TBU
+    category: TV
+- model: marketplace.product
+  pk: 12
+  fields:
+    name: Samsung QE50L
+    category: TV
+- model: marketplace.product
+  pk: 13
+  fields:
+    name: Samsung ZZZAAZ
+    category: TV
+- model: marketplace.product
+  pk: 14
+  fields:
+    name: Samsung QE50LS01TBUTEST
+    category: TV
+- model: marketplace.product
+  pk: 15
+  fields:
+    name: Samsung AZAZAA
+    category: TV
