--- a/.github/workflows/deployment-ci.yaml
+++ b/.github/workflows/deployment-ci.yaml
@@ -25,6 +25,8 @@ jobs:
       - name: Validate
         working-directory: ./deployment
         env:
+          BACKEND_IMAGE_SHA256: test
+          FRONTEND_IMAGE_SHA256: test
           POSTGRES_DATABASE: ${{ secrets.POSTGRES_DATABASE }}
           POSTGRES_HOST: ${{ secrets.POSTGRES_HOST }}
           POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
