--- a/deployment/Makefile
+++ b/deployment/Makefile
@@ -98,4 +98,4 @@ prod-deploy:
 	export BACKEND_IMAGE_SHA256=`docker inspect --format='{{index .RepoDigests 0}}' ${BACKEND_IMAGE_TAG} | cut -f 2 -d @` && \
 	export FRONTEND_IMAGE_SHA256=`docker inspect --format='{{index .RepoDigests 0}}' ${FRONTEND_IMAGE_TAG} | cut -f 2 -d @` && \
 	kubectl config current-context && \
-	helmfile -e prod sync
+	helmfile -e prod apply
