--- a/.github/workflows/backend-ci.yaml
+++ b/.github/workflows/backend-ci.yaml
@@ -1,6 +1,19 @@
 name: backend-ci
 on:
   push:
+    branches:
+      - main
+    paths:
+      - .github/workflows/backend-ci.yaml
+      - src/**
+      - fixtures/**
+      - testdata/**
+      - Pipfile
+      - Dockerfile
+      - Makefile
+  pull_request:
+    branches:
+      - main
     paths:
       - .github/workflows/backend-ci.yaml
       - src/**
