--- a/.github/workflows/deployment-ci.yaml
+++ b/.github/workflows/deployment-ci.yaml
@@ -1,6 +1,16 @@
 name: deployment-ci
 on:
   push:
+    branches:
+      - main
+    paths:
+      - .github/workflows/deployment-ci.yaml
+      - deployment/**
+      - Makefile
+
+  pull_request:
+    branches:
+      - main
     paths:
       - .github/workflows/deployment-ci.yaml
       - deployment/**
