--- a/.github/workflows/frontend-ci.yaml
+++ b/.github/workflows/frontend-ci.yaml
@@ -1,6 +1,16 @@
 name: frontend-ci
 on:
   push:
+    branches:
+      - main
+    paths:
+      - .github/workflows/frontend-ci.yaml
+      - frontend/**
+      - Makefile
+
+  pull_request:
+    branches:
+      - main
     paths:
       - .github/workflows/frontend-ci.yaml
       - frontend/**
