--- a/.github/workflows/frontend-ci.yaml
+++ b/.github/workflows/frontend-ci.yaml
@@ -4,7 +4,7 @@ on:
     branches:
       - main
     paths:
-      - .github/workflows/frontend-ci.yaml
+      - '**/frontend-ci.yaml'
       - frontend/**
       - Makefile
 
