--- a/.github/workflows/deployment-ci.yaml
+++ b/.github/workflows/deployment-ci.yaml
@@ -4,7 +4,7 @@ on:
     branches:
       - main
     paths:
-      - .github/workflows/deployment-ci.yaml
+      - '**/deployment-ci.yaml'
       - deployment/**
       - Makefile
 
