--- a/.github/workflows/deployment-ci.yaml
+++ b/.github/workflows/deployment-ci.yaml
@@ -1,6 +1,16 @@
 name: deployment-ci
 on:
   push:
+    branches:
+      - main
+    paths:
+      - '**/deployment-ci.yaml'
+      - deployment/**
+      - Makefile
+
+  pull_request:
+    branches:
+      - main
     paths:
       - .github/workflows/deployment-ci.yaml
       - deployment/**
@@ -24,5 +34,15 @@ jobs:
 
       - name: Validate
         working-directory: ./deployment
+        env:
+          BACKEND_IMAGE_SHA256: test
+          FRONTEND_IMAGE_SHA256: test
+          POSTGRES_DATABASE: ${{ secrets.POSTGRES_DATABASE }}
+          POSTGRES_HOST: ${{ secrets.POSTGRES_HOST }}
+          POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
+          POSTGRES_PASS: ${{ secrets.POSTGRES_PASS }}
+          POSTGRES_PORT: ${{ secrets.POSTGRES_PORT }}
+          GRAFANA_USER: ${{ secrets.GRAFANA_USER }}
+          GRAFANA_PASS: ${{ secrets.GRAFANA_PASS }}
         run: |
           make validate
