--- a/.github/workflows/frontend-ci.yaml
+++ b/.github/workflows/frontend-ci.yaml
@@ -1,6 +1,16 @@
 name: frontend-ci
 on:
   push:
+    branches:
+      - main
+    paths:
+      - '**/frontend-ci.yaml'
+      - frontend/**
+      - Makefile
+
+  pull_request:
+    branches:
+      - main
     paths:
       - .github/workflows/frontend-ci.yaml
       - frontend/**
@@ -31,6 +41,6 @@ jobs:
         run: make frontend-image-build IMAGE_TAG=zifter/byprice24-site:${GITHUB_REF##*/}
 
       - name: Publish Docker Image
-        if: github.ref == 'refs/heads/master'
+        if: github.ref == 'refs/heads/main'
         run: |
           make frontend-image-publish IMAGE_TAG=zifter/byprice24-site:${GITHUB_REF##*/}
