--- a/deployment/Makefile
+++ b/deployment/Makefile
@@ -88,3 +88,14 @@ validate:
 	helmfile -e local template
 	helmfile -e prod build
 	helmfile -e prod lint
+
+prod-deploy: BACKEND_IMAGE_TAG := zifter/byprice24-cms:latest
+prod-deploy: FRONTEND_IMAGE_TAG := zifter/byprice24-site:latest
+prod-deploy:
+	docker pull ${BACKEND_IMAGE_TAG}
+	docker pull ${FRONTEND_IMAGE_TAG}
+	export `cat .env | xargs` && \
+	export BACKEND_IMAGE_SHA256=`docker inspect --format='{{index .RepoDigests 0}}' ${BACKEND_IMAGE_TAG} | cut -f 2 -d @` && \
+	export FRONTEND_IMAGE_SHA256=`docker inspect --format='{{index .RepoDigests 0}}' ${FRONTEND_IMAGE_TAG} | cut -f 2 -d @` && \
+	kubectl config current-context && \
+	helmfile -e prod apply
