Install kubectl, helm and helmfile

--- a/.github/workflows/deployment-ci.yaml
+++ b/.github/workflows/deployment-ci.yaml
@@ -12,7 +12,7 @@ on:
     branches:
       - main
     paths:
-      - .github/workflows/deployment-ci.yaml
+      - '**/deployment-ci.yaml'
       - deployment/**
       - Makefile
 
