--- a/.github/workflows/backend-ci.yaml
+++ b/.github/workflows/backend-ci.yaml
@@ -15,7 +15,7 @@ on:
     branches:
       - main
     paths:
-      - .github/workflows/backend-ci.yaml
+      - '**/backend-ci.yaml'
       - src/**
       - fixtures/**
       - testdata/**
