--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -10,9 +10,17 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
+      - name: Setup helmfile
+        uses: mamezou-tech/setup-helmfile@v0.8.0
+        with:
+          install-kubectl: yes
+          helm: "v3.6.3"
+          helmfile-version: "v0.140.1"
+
       - name: Deploy
-        uses: steebchen/kubectl@v2.0.0
+        working-directory: ./deployment
         env:
+          KUBECONFIG: ${{ secrets.KUBECONFIG }}
           POSTGRES_DATABASE: ${{ secrets.POSTGRES_DATABASE }}
           POSTGRES_HOST: ${{ secrets.POSTGRES_HOST }}
           POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
@@ -20,6 +28,5 @@ jobs:
           POSTGRES_PORT: ${{ secrets.POSTGRES_PORT }}
           GRAFANA_USER: ${{ secrets.GRAFANA_USER }}
           GRAFANA_PASS: ${{ secrets.GRAFANA_PASS }}
-        with:
-          config: ${{ secrets.KUBECONFIG }}
-          command: cd deployment && make prod-deploy
+        run: |
+          make prod-deploy
