--- a/src/marketplace/fixtures/product_states_test.yaml
+++ b/src/marketplace/fixtures/product_states_test.yaml
@@ -5,6 +5,7 @@
     price: 240.3
     price_currency: BYN
     created: 2021-12-02 12:29:38.749221+00:00
+    rating: 4.3
 - model: marketplace.productstate
   pk: 2
   fields:
@@ -12,6 +13,7 @@
     price: 340.3
     price_currency: BYN
     created: 2021-12-06 12:29:38.749221+00:00
+    rating: 2.5
 - model: marketplace.productstate
   pk: 3
   fields:
@@ -19,6 +21,7 @@
     price: 380.3
     price_currency: BYN
     created: 2021-12-06 12:29:38.749221+00:00
+    rating: 4.1
 - model: marketplace.productstate
   pk: 4
   fields:
@@ -26,7 +29,7 @@
     price: 580.3
     price_currency: BYN
     created: 2021-12-06 12:29:38.749221+00:00
-
+    rating: 4.2
 - model: marketplace.productstate
   pk: 5
   fields:
@@ -34,6 +37,7 @@
     price: 240.3
     price_currency: BYN
     created: 2021-12-02 12:29:38.749221+00:00
+    rating: 1.7
 - model: marketplace.productstate
   pk: 6
   fields:
@@ -41,6 +45,7 @@
     price: 340.3
     price_currency: BYN
     created: 2021-12-06 12:29:38.749221+00:00
+    rating: 3.7
 - model: marketplace.productstate
   pk: 7
   fields:
@@ -48,6 +53,7 @@
     price: 380.3
     price_currency: BYN
     created: 2021-12-06 12:29:38.749221+00:00
+    rating: 3.7
 - model: marketplace.productstate
   pk: 8
   fields:
@@ -55,6 +61,7 @@
     price: 580.3
     price_currency: BYN
     created: 2021-12-06 12:29:38.749221+00:00
+    rating: 4.2
 - model: marketplace.productstate
   pk: 9
   fields:
@@ -62,6 +69,7 @@
     price: 240.3
     price_currency: BYN
     created: 2021-12-02 12:29:38.749221+00:00
+    rating: 3.9
 - model: marketplace.productstate
   pk: 10
   fields:
@@ -69,6 +77,7 @@
     price: 340.3
     price_currency: BYN
     created: 2021-12-06 12:29:38.749221+00:00
+    rating: 3.8
 - model: marketplace.productstate
   pk: 11
   fields:
@@ -76,6 +85,7 @@
     price: 380.3
     price_currency: BYN
     created: 2021-12-06 12:29:38.749221+00:00
+    rating: 3.7
 - model: marketplace.productstate
   pk: 12
   fields:
@@ -83,7 +93,7 @@
     price: 580.3
     price_currency: BYN
     created: 2021-12-06 12:29:38.749221+00:00
-
+    rating: 2.0
 - model: marketplace.productstate
   pk: 13
   fields:
@@ -91,6 +101,7 @@
     price: 240.3
     price_currency: BYN
     created: 2021-12-02 12:29:38.749221+00:00
+    rating: 5.0
 - model: marketplace.productstate
   pk: 14
   fields:
@@ -98,6 +109,7 @@
     price: 340.3
     price_currency: BYN
     created: 2021-12-06 12:29:38.749221+00:00
+    rating: 4.4
 - model: marketplace.productstate
   pk: 15
   fields:
@@ -105,6 +117,7 @@
     price: 380.3
     price_currency: BYN
     created: 2021-12-06 12:29:38.749221+00:00
+    rating: 2.2
 - model: marketplace.productstate
   pk: 16
   fields:
@@ -112,3 +125,4 @@
     price: 580.3
     price_currency: BYN
     created: 2021-12-06 12:29:38.749221+00:00
+    rating: 4.2
