--- a/src/marketplace/fixtures/product_states_test.yaml
+++ b/src/marketplace/fixtures/product_states_test.yaml
@@ -6,6 +6,7 @@
     price_currency: BYN
     created: 2021-12-02 12:29:38.749221+00:00
     rating: 4.3
+    review_count: 3
 - model: marketplace.productstate
   pk: 2
   fields:
@@ -14,6 +15,7 @@
     price_currency: BYN
     created: 2021-12-06 12:29:38.749221+00:00
     rating: 2.5
+    review_count: 3
 - model: marketplace.productstate
   pk: 3
   fields:
@@ -22,6 +24,7 @@
     price_currency: BYN
     created: 2021-12-06 12:29:38.749221+00:00
     rating: 4.1
+    review_count: 3
 - model: marketplace.productstate
   pk: 4
   fields:
@@ -30,6 +33,7 @@
     price_currency: BYN
     created: 2021-12-06 12:29:38.749221+00:00
     rating: 4.2
+    review_count: 3
 - model: marketplace.productstate
   pk: 5
   fields:
@@ -38,6 +42,7 @@
     price_currency: BYN
     created: 2021-12-02 12:29:38.749221+00:00
     rating: 1.7
+    review_count: 3
 - model: marketplace.productstate
   pk: 6
   fields:
@@ -46,6 +51,7 @@
     price_currency: BYN
     created: 2021-12-06 12:29:38.749221+00:00
     rating: 3.7
+    review_count: 3
 - model: marketplace.productstate
   pk: 7
   fields:
@@ -54,6 +60,7 @@
     price_currency: BYN
     created: 2021-12-06 12:29:38.749221+00:00
     rating: 3.7
+    review_count: 3
 - model: marketplace.productstate
   pk: 8
   fields:
@@ -62,6 +69,7 @@
     price_currency: BYN
     created: 2021-12-06 12:29:38.749221+00:00
     rating: 4.2
+    review_count: 3
 - model: marketplace.productstate
   pk: 9
   fields:
@@ -70,6 +78,7 @@
     price_currency: BYN
     created: 2021-12-02 12:29:38.749221+00:00
     rating: 3.9
+    review_count: 3
 - model: marketplace.productstate
   pk: 10
   fields:
@@ -78,6 +87,7 @@
     price_currency: BYN
     created: 2021-12-06 12:29:38.749221+00:00
     rating: 3.8
+    review_count: 3
 - model: marketplace.productstate
   pk: 11
   fields:
@@ -86,6 +96,7 @@
     price_currency: BYN
     created: 2021-12-06 12:29:38.749221+00:00
     rating: 3.7
+    review_count: 3
 - model: marketplace.productstate
   pk: 12
   fields:
@@ -94,6 +105,7 @@
     price_currency: BYN
     created: 2021-12-06 12:29:38.749221+00:00
     rating: 2.0
+    review_count: 3
 - model: marketplace.productstate
   pk: 13
   fields:
@@ -102,6 +114,7 @@
     price_currency: BYN
     created: 2021-12-02 12:29:38.749221+00:00
     rating: 5.0
+    review_count: 3
 - model: marketplace.productstate
   pk: 14
   fields:
@@ -110,6 +123,7 @@
     price_currency: BYN
     created: 2021-12-06 12:29:38.749221+00:00
     rating: 4.4
+    review_count: 3
 - model: marketplace.productstate
   pk: 15
   fields:
@@ -118,6 +132,7 @@
     price_currency: BYN
     created: 2021-12-06 12:29:38.749221+00:00
     rating: 2.2
+    review_count: 3
 - model: marketplace.productstate
   pk: 16
   fields:
@@ -126,3 +141,4 @@
     price_currency: BYN
     created: 2021-12-06 12:29:38.749221+00:00
     rating: 4.2
+    review_count: 3
