--- a/.github/workflows/deployment-ci.yaml
+++ b/.github/workflows/deployment-ci.yaml
@@ -44,5 +44,6 @@ jobs:
           POSTGRES_PORT: ${{ secrets.POSTGRES_PORT }}
           GRAFANA_USER: ${{ secrets.GRAFANA_USER }}
           GRAFANA_PASS: ${{ secrets.GRAFANA_PASS }}
+          DJANGO_SECRET: ${{ secrets.DJANGO_SECRET }}
         run: |
           make validate
