--- a/deployment/helmfile/10-application.yaml
+++ b/deployment/helmfile/10-application.yaml
@@ -5,7 +5,7 @@ commonLabels:
 
 releases:
   - name: cms
-    namespace: default
+    namespace: {{ .Values.namespace }}
     chart: ../charts/cms
     labels:
       side: "backend"
@@ -22,13 +22,14 @@ releases:
           port: {{ .Values.postgres.port }}
 
   - name: worker-crawler
-    namespace: default
+    namespace: {{ .Values.namespace }}
     chart: ../charts/worker
     labels:
       side: "backend"
     values:
       - releases/backend/worker/values.yaml
       - releases/backend/worker/values-crawler.yaml
+      - releases/backend/worker//values-{{ .Environment.Name }}.yaml
       - image:
           tag: {{ .Values.app.backend }}
       - postgres:
@@ -37,9 +38,11 @@ releases:
           password: {{ .Values.postgres.pass }}
           host: {{ .Values.postgres.host }}
           port: {{ .Values.postgres.port }}
+      - secretKey:
+          tag: {{ .Values.app.cms.secretKey }}
 
   - name: worker-etc
-    namespace: default
+    namespace: {{ .Values.namespace }}
     chart: ../charts/worker
     labels:
       side: "backend"
@@ -56,7 +59,7 @@ releases:
           port: {{ .Values.postgres.port }}
 
   - name: site
-    namespace: default
+    namespace: {{ .Values.namespace }}
     chart: ../charts/site
     labels:
       side: "frontend"
