--- a/deployment/helmfile/releases/frontend/values-prod.yaml
+++ b/deployment/helmfile/releases/frontend/values-prod.yaml
@@ -1,7 +1,7 @@
 ingress:
   enabled: true
   hosts:
-    - host: price24.by
+    - host: findprice.by
       paths:
         - path: /
           pathType: Prefix
