--- a/deployment/helmfile/values-local.yaml
+++ b/deployment/helmfile/values-local.yaml
@@ -1,3 +1,4 @@
+namespace: default
 monitoring:
   enabled: true
   grafana:
@@ -7,6 +8,8 @@ monitoring:
 app:
   backend: test
   frontend: test
+  cms:
+    secretKey: 'django-insecure-tfv^rapkl5+j5&c+x64-iy3#m+hpmhyj10f^b(ww2xxu&_#78+'
 
 redis:
   enabled: true
@@ -18,3 +21,7 @@ postgres:
   user: "root"
   pass: "1234"
   port: "5432"
+
+domain:
+  site: localhost
+  internal: localhost
