--- a/deployment/Makefile
+++ b/deployment/Makefile
@@ -89,13 +89,14 @@ validate:
 	helmfile -e prod build
 	helmfile -e prod lint
 
-deploy-prod: BACKEND_IMAGE_TAG := zifter/byprice24-cms:latest
-deploy-prod: FRONTEND_IMAGE_TAG := zifter/byprice24-site:latest
-deploy-prod:
+helmfile-prod: ARGS := diff
+helmfile-prod: BACKEND_IMAGE_TAG := zifter/byprice24-cms:latest
+helmfile-prod: FRONTEND_IMAGE_TAG := zifter/byprice24-site:latest
+helmfile-prod:
 	docker pull ${BACKEND_IMAGE_TAG}
 	docker pull ${FRONTEND_IMAGE_TAG}
 	export `cat .env | xargs` && \
 	export BACKEND_IMAGE_SHA256=`docker inspect --format='{{index .RepoDigests 0}}' ${BACKEND_IMAGE_TAG} | cut -f 2 -d @` && \
 	export FRONTEND_IMAGE_SHA256=`docker inspect --format='{{index .RepoDigests 0}}' ${FRONTEND_IMAGE_TAG} | cut -f 2 -d @` && \
 	kubectl config current-context && \
-	helmfile -e prod apply
+	helmfile -e prod ${ARGS}
